# mpi-traffic-sim-rust

./: .gitignore  .gitpod.yml  CITATION.cff  Cargo.toml  README.md
.devcontainer/: devcontainer.json
assets/: compile.sh  generate_benchmarks_mpi.sh  graph.json  preprare_hpc.sh
assets/benchmarking/: cc_generate_batch_loads.py  cc_multi-threaded.py  cc_single-threaded.py  generate_batch_loads.py  generate_batch_loads_optimized.py
assets/benchmarking/scripts/: cc_generate_batch_loads.py  cc_generate_batch_loads_optimized.py  cc_multi-threaded.py  cc_single-noded.py  cc_single-threaded.py  cc_single_node_cc_single_node_1_16_1.sh  cc_single_node_cc_single_node_1_16_10.sh  cc_single_node_cc_single_node_1_16_100.sh  cc_single_node_cc_single_node_1_16_1000.sh  cc_single_node_cc_single_node_1_16_10000.sh  cc_single_node_cc_single_node_1_24_1.sh  cc_single_node_cc_single_node_1_24_10.sh  cc_single_node_cc_single_node_1_24_100.sh  cc_single_node_cc_single_node_1_24_1000.sh  cc_single_node_cc_single_node_1_24_10000.sh  cc_single_node_cc_single_node_1_2_1.sh  cc_single_node_cc_single_node_1_2_10.sh  cc_single_node_cc_single_node_1_2_100.sh  cc_single_node_cc_single_node_1_2_1000.sh  cc_single_node_cc_single_node_1_2_10000.sh  cc_single_node_cc_single_node_1_4_1.sh  cc_single_node_cc_single_node_1_4_10.sh  (+10 more)
src/: cli.rs  error.rs  main.rs  prelude.rs  utils.rs  vmpi.rs  world.rs
src/graph/: graph.rs  mod.rs  osm_graph.rs  rect.rs
src/mmpi/: mod.rs
src/models/: graph_input.rs  mod.rs  vehicle.rs  vehicle_builder.rs
src/streets/: mod.rs  vehicle_builder.rs
