[package]
name = "traffic-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
#mpi = { version = "0.6", features = ["user-operations", "derive"] }
# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
# Logging
tracing = "0.1"
tracing-serde = "0.1"
# Graph
petgraph = { version = "0.6", features = ["serde-1"] }
