[package]
name = "traffic-sim"
version = "0.1.0"
edition = "2021"
description = "A traffic simulation using MPI and Rust"
homepage = "https://github.com/valerius21/traffic-sim"
repository = "https://github.com/valerius21/traffic-sim"
license = "MIT"
authors = ["Valerius Mattfeld <mail@valerius.me>", "Bianca Vetter <bianca.vetter@tutanota.com>"]
readme = "./README.md"

[dependencies]
# basics
clap = { version = "4.3.23", features = ["derive"] }
mpi = { version = "0.6", features = ["user-operations", "derive"] }
thiserror = "^1.0.47"
nanoid = "0.4.0"
rand = "0.8"
# Serialization / Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
bincode = "1.3.3"
# Logging
log = "0.4.14"
simple_logger = "4.0"
# Graph
petgraph = { version = "0.6", features = ["serde-1"] }
# concurrency
tokio = { version = "1.32", features = ["full"] }
rayon = "1.7"
